[1.8.x] Fixed #24784 -- Fixed visibility regression in admin's FK widget.
Backport of fb94e7b8cf8f68629b51a4d4f2c37400ef1c7469 from master

--- a/django/contrib/admin/static/admin/css/widgets.css
+++ b/django/contrib/admin/static/admin/css/widgets.css
@@ -579,6 +579,7 @@ ul.orderer li.deleted:hover, ul.orderer li.deleted a.selector:hover {
 
 /* RELATED WIDGET WRAPPER */
 .related-widget-wrapper {
+    float: left;       /* display properly in form rows with multiple fields */
     overflow: hidden;  /* clear floated contents */
 }
 
